Bug 1216566 - Fix a bug in nsIServiceWorkerManager.getAllRegistrations;r=catalinb